<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#3D3D3D"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/encrypt_text"
        android:background="#44000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/encrypt"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/box"
        app:layout_constraintEnd_toStartOf="@id/decrypt_text"
        app:layout_constraintBottom_toBottomOf="@id/decrypt_text"
        app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        android:id="@+id/decrypt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/decrypt"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/encrypt_text"
        app:layout_constraintEnd_toEndOf="@id/box"
        app:layout_constraintBottom_toBottomOf="@id/encrypt_text"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box"
        android:background="#44000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/encrypt_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioGroup
            android:id="@+id/cipher_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/encrypt_text"
            app:layout_constraintStart_toStartOf="@id/text_plain"
            tools:ignore="NotSibling">
            <RadioButton
                android:id="@+id/cipher_mode_aes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/aes"
                android:textSize="15sp"
                android:textColor="#FFFFF0"/>
            <RadioButton
                android:id="@+id/cipher_mode_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des"
                android:textSize="15sp"
                android:textColor="#FFFFF0"/>
        </RadioGroup>

        <TextView
            android:id="@+id/hint_plain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/insert_plain_text"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@id/text_plain"
            app:layout_constraintTop_toBottomOf="@id/cipher_mode" />

        <EditText
            android:id="@+id/text_plain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/insert_plain_text_here"
            android:inputType="textLongMessage|textMultiLine"
            android:lines="3"
            android:textSize="15sp"
            android:textColor="#000000"
            android:background="#FFFFF0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hint_plain"/>

        <TextView
            android:id="@+id/hint_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/insert_key"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@id/text_plain"
            app:layout_constraintTop_toBottomOf="@id/text_plain" />

        <EditText
            android:id="@+id/text_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/insert_key_text"
            android:inputType="text"
            android:textSize="15sp"
            android:textColor="#000000"
            android:background="#FFFFF0"
            android:min="16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hint_key"/>

        <Button
            android:id="@+id/generate_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/encrypt"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/text_key"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/hint_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/result"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@id/text_plain"
            app:layout_constraintTop_toBottomOf="@id/generate_result" />

        <EditText
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/result_display"
            android:inputType="textLongMessage|textMultiLine"
            android:lines="5"
            android:textSize="15sp"
            android:textColor="#000000"
            android:background="#FFFFF0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hint_result"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textSize="10sp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>